--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -142,6 +142,7 @@
 									<div><input type="button" id="buttonEditBook" value="Edit" /></div>
 								</form>
 							</section>
+						</main>
 				</ul>		
 			</div><!-- end page 1 content -->
 			
@@ -278,11 +279,12 @@
 				</p>
 			</div><!-- /footer -->
 		</div><!-- /page3 -->
-<script src="cordova.js"></script><script type="text/javascript" src="js/jquery-1.11.1.min.js" id="cordova-jquery"></script><script type="text/javascript" id="jqm-trans-disable">
+		<script src="cordova.js"></script><script type="text/javascript" src="js/jquery-1.11.1.min.js" id="cordova-jquery"></script><script type="text/javascript" id="jqm-trans-disable">
 		/* For having a faster transition */
 		$(document).on("mobileinit", function() {
 				$.mobile.defaultPageTransition = "none";
 				$.mobile.defaultDialogTransition = "none";
 		});
-		</script><script type="text/javascript" src="js/jquery-1.5.0.mobile.min.js"></script><script src="js/index.js"></script></body>
+		</script><script type="text/javascript" src="js/jquery-1.5.0.mobile.min.js"></script><script src="js/index.js"></script>
+	</body>
 </html>
